# events-sdk-python

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  RELEASING.md  pyproject.toml  requirements.txt  ruff.toml  setup.py  simulator.py
.buildscripts/: e2e.sh
.circleci/: config.yml
.github/workflows/: ci-release.yml  ci.yml  tests.yml
hightouch/analytics/: __init__.py  client.py  consumer.py  oauth_manager.py  request.py
hightouch/analytics/test/: __init__.py  client.py  constants.py  consumer.py  module.py  oauth.py  request.py  utils.py
samples/: oauth.py
segment/analytics/: __init__.py  client.py  consumer.py  oauth_manager.py  request.py  utils.py
segment/analytics/test/: __init__.py  client.py  consumer.py  module.py  oauth.py  request.py  utils.py
