[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hightouch*"]

[project]
name = "events-sdk-python"
version = "0.0.3"
description = "Events SDK Python for Hightouch event collection."
readme = "README.md"
authors = [{ name = "Hightouch", email = "engineering@hightouch.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = []
dependencies = [
    "requests~=2.32",
    "backoff~=2.2",
    "python-dateutil~=2.9",
    "PyJWT>=2.8,<3.0",
    "pyjwt[crypto]",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "mock==5.2.0",
    "ruff==0.15.1",
]

[project.urls]
Homepage = "https://github.com/ht-sdks/events-sdk-python"
